--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,18 @@
 [package]
-name = "v8"
+name = "v8_runtime"
 version = "0.1.0"
 edition = "2021"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [dependencies]
-v8 = "0.60.1"
-serde_v8 = "0.82.0"
-serde = { version= "1.0.152", features = ["derive"] }
+clap = { version = "4.1.4", features = ["derive"] }
+once_cell = "1.17.0"
+lazy_static = "1.4.0"
+reqwest = { version = "0.11.14", features = ["blocking"] }
+serde = {version = "1.0.152", features = ["derive"]}
 serde_json = "1.0.93"
+serde_v8 = "0.82.0"
+tokio = { version = "1.25.0", features = ["rt"] }
+v8 = "0.60.1"
+
